refactor and test ok
