# cmd/stationd/docs/swagger.yaml
@@ -2,6 +2,8 @@ basePath: /feeStation/api
 definitions:
   station_handlers.PoolInfo:
     properties:
+      decimals:
+        type: integer
       poolAddress:
         description: base58,bech32 or hex
         type: string
@@ -11,6 +13,27 @@ definitions:
       symbol:
         type: string
     type: object
+  station_handlers.ReqPostSwapInfo:
+    properties:
+      inAmount:
+        description: decimal
+        type: string
+      minOutAmount:
+        description: decimal
+        type: string
+      poolAddress:
+        type: string
+      stafihubAddress:
+        description: hex
+        type: string
+      symbol:
+        type: string
+    type: object
+  station_handlers.RspGetSwapInfo:
+    properties:
+      swapStatus:
+        type: integer
+    type: object
   station_handlers.RspPoolInfo:
     properties:
       poolInfoList:
@@ -18,16 +41,16 @@ definitions:
           $ref: '#/definitions/station_handlers.PoolInfo'
         type: array
       swapMaxLimit:
-        description: decimals 12
+        description: decimals 6
         type: string
       swapMinLimit:
-        description: decimals 12
+        description: decimals 6
         type: string
     type: object
-  station_handlers.RspSwapInfo:
+  station_handlers.RspPostSwapInfo:
     properties:
-      swapStatus:
-        type: integer
+      uuid:
+        type: string
     type: object
   utils.Rsp:
     properties:
@@ -69,14 +92,9 @@ paths:
     get:
       description: get swap info
       parameters:
-      - description: token symbol
+      - description: uuid hex string
         in: query
-        name: symbol
-        required: true
-        type: string
-      - description: tx hash hex string
-        in: query
-        name: txHash
+        name: uuid
         required: true
         type: string
       produces:
@@ -89,9 +107,35 @@ paths:
             - $ref: '#/definitions/utils.Rsp'
             - properties:
                 data:
-                  $ref: '#/definitions/station_handlers.RspSwapInfo'
+                  $ref: '#/definitions/station_handlers.RspGetSwapInfo'
               type: object
       summary: get swap info
+      tags:
+      - v1
+    post:
+      consumes:
+      - application/json
+      description: post swap info
+      parameters:
+      - description: user swap info
+        in: body
+        name: param
+        required: true
+        schema:
+          $ref: '#/definitions/station_handlers.ReqPostSwapInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Rsp'
+            - properties:
+                data:
+                  $ref: '#/definitions/station_handlers.RspPostSwapInfo'
+              type: object
+      summary: post swap info
       tags:
       - v1
 swagger: "2.0"
